website: remove `$scheme` from cache keys
The mempool and joinmarket-orderbook backend responses are
$scheme-invariant, i.e. the same for http and https.

--- a/website/mempool-api.conf
+++ b/website/mempool-api.conf
@@ -48,7 +48,7 @@ location @mempool-api-cache-default {
     proxy_pass http://mempool-backend;
 
     proxy_cache mempool_api;
-    proxy_cache_key $scheme$uri;
+    proxy_cache_key $uri;
     proxy_cache_valid 200 10s;
     expires 10s;
 }
@@ -56,7 +56,7 @@ location @mempool-api-cache-warm {
     proxy_pass http://mempool-backend;
 
     proxy_cache mempool_api;
-    proxy_cache_key $scheme$uri;
+    proxy_cache_key $uri;
     proxy_cache_valid 200 10s;
 
     proxy_cache_background_update on;
@@ -66,7 +66,7 @@ location @mempool-api-cache-forever {
     proxy_pass http://mempool-backend;
 
     proxy_cache mempool_api;
-    proxy_cache_key $scheme$uri;
+    proxy_cache_key $uri;
     proxy_cache_valid 200 30d;
     expires 30d;
 
