mempool: fix comment

--- a/website/mempool-api.conf
+++ b/website/mempool-api.conf
@@ -18,7 +18,7 @@ location /api/v1/block/ {
 location /api/v1/address/ {
     # TODO-EXTERNAL:
     # Caching address queries would help with our slow Electrum backend,
-    # but breaks infinite scrolling the frontend in address view.
+    # but breaks infinite scrolling in the frontend address view.
     try_files /dev/null @mempool-api-no-cache;
 }
 location /api/v1 {
