--- a/website/mempool-api.conf
+++ b/website/mempool-api.conf
@@ -12,6 +12,9 @@ location /api/v1/statistics {
 location /api/v1/mining {
     try_files /dev/null @mempool-api-cache-warm;
 }
+location /api/v1/fees/recommended {
+	try_files /dev/null @mempool-api-cache-hot;
+}
 location /api/v1/block/ {
     try_files /dev/null @mempool-api-cache-forever;
 }
@@ -52,12 +55,24 @@ location @mempool-api-cache-default {
     proxy_cache_valid 200 10s;
     expires 10s;
 }
+location @mempool-api-cache-hot {
+    proxy_pass http://mempool-backend;
+
+    proxy_cache mempool_api;
+    proxy_cache_key $uri;
+    proxy_cache_valid 200 1s;
+    expires 1s;
+
+    proxy_cache_background_update on;
+    proxy_cache_use_stale updating;
+}
 location @mempool-api-cache-warm {
     proxy_pass http://mempool-backend;
 
     proxy_cache mempool_api;
     proxy_cache_key $uri;
     proxy_cache_valid 200 10s;
+    expires 120s;
 
     proxy_cache_background_update on;
     proxy_cache_use_stale updating;
